# Kai

./: CMakeLists.txt  CMakeOptions.txt  README.md  ROADMAP.md  main.c  main.cpp
cmake/: PackConfigurations.cmake
src/: CMakeLists.txt  core.c  kargo.h  kcore.cpp  kstring.cpp  kstring.h  lily.h
